@@ -1,8 +1,8 @@
 
-Sys.setenv(TZ=Sys.timezone())
 options(digits.secs=6)
 
 library(anytime)
+Sys.setenv(TZ=anytime:::getTZ())
 
 ## Dates: Integer
 anytime(20160101L + 0:2)
@@ -16,14 +16,19 @@ anytime(as.character(20160101 + 0:2))
 ## Dates: alternate formats
 anytime(c("20160101", "2016/01/02", "2016-01-03"))
 
-## Datetime: ISO
-anytime("2016-01-01 10:11:12")          # ISO
-anytime("2016-01-01 10:11:12.345678")   # ISO
+## Datetime: ISO with/without fractional seconds
+anytime(c("2016-01-01 10:11:12", "2016-01-01 10:11:12.345678"))
 
-## Datetime: compact (crazy)
-anytime("20160101T101112")              # crazy-er
-anytime("20160101T101112.345678")       # works with fractional seconds
+## Datetime: ISO alternate (?) with 'T' separator
+anytime(c("20160101T101112", "20160101T101112.345678"))
+
+## Datetime: textual month formats
+anytime(c("2016-Sep-01 10:11:12", "Sep/01/2016 10:11:12", "Sep-01-2016 10:11:12"))
+
+## Datetime: Mixed format (cf http://stackoverflow.com/questions/39259184)
+anytime(c("Thu Sep 01 10:11:12 2016", "Thu Sep 01 10:11:12.345678 2016"))
 
 ## Datetime: pre/post DST
 anytime(c("2016-01-31 12:13:14", "2016-08-31 12:13:14"))
-anytime(c("2016-01-31 12:13:14", "2016-08-31 12:13:14"), tz="UTC")
+anytime(c("2016-01-31 12:13:14", "2016-08-31 12:13:14"), tz="UTC")  # important: catches change
+
