@@ -7,6 +7,8 @@
 
 	* R/anytime.R (anytime): Use getTZ() to get default value
 
+	* tests/simpleTests.R: Use getTZ(), some extensions
+
 2016-09-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Added, using run.sh from Travis CI
